[project]
name = "kwtsms"
version = "0.1.0"
description = "Python client for the kwtSMS API (kwtsms.com)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["sms", "kwtsms", "kuwait", "sms-gateway", "otp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://kwtsms.com"
Documentation = "https://www.kwtsms.com/doc/KwtSMS.com_API_Documentation_v41.pdf"

[project.scripts]
kwtsms = "kwtsms._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kwtsms"]

[dependency-groups]
dev = ["pytest>=7.0"]
